syntax = "proto3";
package slinky.marketmap.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "slinky/marketmap/v1/market.proto";

option go_package = "github.com/skip-mev/slinky/x/marketmap/types";

// Query is the query service for the x/marketmap module.
service Query {
  // GetMarketMap returns the full market map stored in the x/marketmap
  // module.
  rpc GetMarketMap(GetMarketMapRequest) returns (GetMarketMapResponse) {
    option (google.api.http).get = "/slinky/marketmap/v1/marketmap";
  }
}

// GetMarketMapRequest is the query request for the GetMarketMap query.
// It takes no arguments.
message GetMarketMapRequest {}

// GetMarketMapResponse is the query response for the GetMarketMap query.
message GetMarketMapResponse {
  // MarketMap defines the global set of market configurations for all providers
  // and markets.
  TickersConfig market_map = 1 [ (gogoproto.nullable) = false ];

  // LastUpdated is the last block height that the market map was updated.
  // This field can be used as an optimization for clients checking if there
  // is a new update to the map.
  int64 last_updated = 2;
}
